--- a/app/views/reptiles/index.html.erb
+++ b/app/views/reptiles/index.html.erb
@@ -1,6 +1,8 @@
 <% @reptiles.each do |reptile| %>
 <div>
+  <%= link_to reptile_path(reptile.id) do %>
   <%= attachment_image_tag reptile, :image %>
+  <% end %>
   <p>投稿ユーザー画像: <%= image_tag('no_image.jpg') %></p>
   <p>記事タイトル: <%= reptile.title %></p>
   <P>本文: <%= reptile.caption %></P>
