--- a/app/views/reptiles/show.html.erb
+++ b/app/views/reptiles/show.html.erb
@@ -18,14 +18,20 @@
     <p><%= image_tag('no_image.jpg') %></p>
     <%= reptile_comment.user.name %>
     <%= reptile_comment.created_at.strftime('%Y/%m/%d') %><%= reptile_comment.comment %>
+    <% if reptile_comment.user == current_user %>
+    <div>
+      <%= link_to "コメント削除", reptile_reptile_comment_path(reptile_comment.reptile, reptile_comment), method: :delete %>
+    </div>
+      <% end %>
     <% end %>
 </div>
 
 <!--コメント投稿ページ-->
-<div>
-  <%= form_with(model:[@reptile, @reptile_comment], local: true) do |f| %>
-  <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
-  <%= f.submit "送信する" %>
+  <div>
+    <%= form_with(model:[@reptile, @reptile_comment], local: true) do |f| %>
+    <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
+    <%= f.submit "送信する" %>
+
   <% end %>
 
-</div>
+  </div>
