--- a/app/views/reptiles/index.html.erb
+++ b/app/views/reptiles/index.html.erb
@@ -3,7 +3,7 @@
   <%= link_to reptile_path(reptile.id) do %>
   <%= attachment_image_tag reptile, :image %>
   <% end %>
-  <p>投稿ユーザー画像: <%= image_tag('no_image.jpg') %></p>
+  <p>投稿ユーザー画像: <%= attachment_image_tag reptile.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %></p>
   <p>記事タイトル: <%= reptile.title %></p>
   <P>本文: <%= reptile.caption %></P>
   <p>ユーザーネーム: <%= reptile.user.name %></p>
