--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,8 +3,8 @@
     <tr>
       <th>プロフィール画像</th>
       <th>名前</th>
-      <%= th colspan="3"%></th>
-    </tr>
+      <th colspan="3"%></th>
+      </tr>
   </thead>
   <tbody>
     <% user.each do |user| %>
