検索機能修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,8 @@
         </div>
       </nav>
     </header>
-    <!<div class="body">
+    <%= render 'searchs/form' %>
+    <div class="body">
       <p class="notice"><%= notice %></p>
           <%= yield %>
 
