検索表示ページ調整中

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,19 +14,19 @@
         <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
         <!--フォロー機能-->
         <td>
-        <%#= link_to user.followings.count, following_user_path(user) %> フォロー
-        <%#= link_to user.followers.count, followers_user_path(user) %>フォロワー
+        <%= link_to user.followings.count, following_user_path(user) %> フォロー
+        <%= link_to user.followers.count, followers_user_path(user) %>フォロワー
         </td>
         <td>
-          <%# if current_user.already_following?(user) %>
-          <%#= link_to user_relationships_path(user), method: :delete do %>
+          <% if current_user.already_following?(user) %>
+          <%= link_to user_relationships_path(user), method: :delete do %>
           <button class="btn btn-danger">フォロー解除</button>
-          <%# end %>
-          <%# else %>
-          <%#= link_to user_relationships_path(user), method: :post do %>
+          <% end %>
+          <% else %>
+          <%= link_to user_relationships_path(user), method: :post do %>
           <button class="btn btn-primary">フォロー</button>
-          <%# end %>
-          <%# end %>
+          <% end %>
+          <% end %>
         </td>
         </tr>
           <% end %>
