--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,20 +24,26 @@
 
           <% if user_signed_in? %>
           <li>
-            <%= link_to '投稿フォーム', new_reptile_path %>
+            <%= link_to '投稿フォーム', new_reptile_path,class: 'far fa-clipboard nav-link text-light' %>
           </li>
           <li>
-            <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+            <%= link_to "ログアウト", destroy_user_session_path, method: :delete,class: 'fas fa-sign-out-alt nav-link text-light' %>
           </li>
           <li>
-            <%= link_to 'マイページ', user_path(current_user.id) %>
+            <%= link_to 'マイページ', user_path(current_user.id),class: "fas fa-male nav-link text-ligh" %>
+          </li>
+          <li>
+            <%= link_to 'ユーザー',users_path,class: 'fas fa-users nav-link text-light' %>
+          </li>
+          <li>
+            <%= link_to '記事一覧',reptiles_path,class: 'fas fa-book-open nav-link text-light'%>
           </li>
           <% else %>
           <li>
-            <%= link_to "新規登録", new_user_registration_path %>
+            <%= link_to "新規登録", new_user_registration_path,class: 'fas fa-user-plus nav-link text-light' %>
           </li>
           <li>
-            <%= link_to "ログイン", new_user_session_path %>
+            <%= link_to "ログイン", new_user_session_path,class: 'fas fa-sign-in-alt nav-link text-light' %>
           </li>
           <% end %>
            </ul>
