--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,34 +1,12 @@
-<table class='table'>
-  <thead>
-    <tr>
-      <th>image</th>
-      <th>name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg") %></td>
-        <td><%= user.name %></td>
-        <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
-        <!--フォロー機能-->
-        <td>
-        <%= link_to user.followings.count, following_user_path(user) %> フォロー
-        <%= link_to user.followers.count, followers_user_path(user) %>フォロワー
-        </td>
-        <td>
-          <% if current_user.already_following?(user) %>
-          <%= link_to user_relationships_path(user), method: :delete do %>
-          <button class="btn btn-danger">フォロー解除</button>
-          <% end %>
-          <% else %>
-          <%= link_to user_relationships_path(user), method: :post do %>
-          <button class="btn btn-primary">フォロー</button>
-          <% end %>
-          <% end %>
-        </td>
-        </tr>
-          <% end %>
-  </tbody>
-</table>
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-3'>
+        <h2>ユーザー情報</h2>
+        <%= render 'info', user: @user %>
+        </div>
+    <div class='col-md-8 offset-md-1'>
+        <h2>ユーザー</h2>
+        <%= render 'users/index',users: @users %>
+    </div>
+  </div>
+</div>
