--- a/app/views/reptiles/show.html.erb
+++ b/app/views/reptiles/show.html.erb
@@ -1,12 +1,12 @@
 <div>
-  <%= attachment_image_tag @reptile, :image %>
+  <%= attachment_image_tag(@reptile, :image, :fill, 100, 100, fallback: "no_image.jpg") %>
     <p>投稿ユーザー画像: <%= attachment_image_tag @reptile.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %></p>
     <p>記事タイトル: <%= @reptile.title %></p>
     <P>本文: <%= @reptile.caption %></P>
     <p>ユーザーネーム: <%= @reptile.user.name %></p>
   <% if @reptile.user == current_user %>
     <%= link_to "記事削除", reptile_path(@reptile), method: :delete %>
-    <%= link_to "編集へ", edit_reptile_path(current_user) %>
+    <%= link_to "編集へ", edit_reptile_path(@reptile) %>
   <% end %>
   <!--いいね-->
   <% if @reptile.favorited_by?(current_user) %>
