--- a/app/views/searchs/_form.html.erb
+++ b/app/views/searchs/_form.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? %>
     <%= form_tag(search_path, method: :get) do %>
     <%= text_field_tag 'content' %>
-    <%= select_tag 'model', options_for_select({"User" => "user", "Book" => "book"}) %>
+    <%= select_tag 'model', options_for_select({"ユーザー" => "user", "記事" => "reptile"}) %>
     <%= select_tag 'method', options_for_select({"完全一致" => "perfect_match", "部分一致" => "partial_match", "前方一致" => "forward_match", "後方一致" => "backward_match"}) %>
     <%= submit_tag '検索' %>
     <% end %>
