--- a/app/views/searchs/search.html.erb
+++ b/app/views/searchs/search.html.erb
@@ -2,6 +2,6 @@
 <h3>Users search for "<%= @content %>"</h3>
 <%= render 'users/index', users: @records %>
 <% else @model == 'reptile' %>
-<h3>Books search for "<%= @content %>"</h3>
-<%= render 'reptile/index', books: @records %>
+<h3>Reptile search for "<%= @content %>"</h3>
+<%= render 'reptiles/index', reptiles: @records %>
 <% end %>
