レイアウト修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,15 +30,21 @@
             <%= link_to "ログアウト", destroy_user_session_path, method: :delete,class: 'fas fa-sign-out-alt nav-link text-light' %>
           </li>
           <li>
-            <%= link_to 'マイページ', user_path(current_user.id),class: "fas fa-male nav-link text-ligh" %>
+            <%= link_to 'マイページ', user_path(current_user.id),class: 'fas fa-male nav-link text-ligh' %>
           </li>
           <li>
             <%= link_to 'ユーザー',users_path,class: 'fas fa-users nav-link text-light' %>
           </li>
           <li>
-            <%= link_to '記事一覧',reptiles_path,class: 'fas fa-book-open nav-link text-light'%>
+            <%= link_to '記事一覧',reptiles_path,class: 'fas fa-book-open nav-link text-light' %>
           </li>
           <% else %>
+          <li>
+           <%= link_to 'ホーム',root_path,class: 'fas fa-home nav-link text-light' %>
+           </li>
+          <li>
+            <%= link_to "概要", home_about_path,class: 'fab fa-suse nav-link text-light' %>
+          </li>
           <li>
             <%= link_to "新規登録", new_user_registration_path,class: 'fas fa-user-plus nav-link text-light' %>
           </li>
