--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,38 @@
-<div>
-  <h3><%= @user.name %></h3>
-    <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
-  <% if @user.id == current_user.id %>
-    <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
-  <% end %>
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-3'>
+      <h3><%= @user.name %></h3>
+        <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+        <% if @user.id == current_user.id %>
+        <!--質問箇所-->
+        <% if @user == current_user %>
+          <%= link_to "プロフィール編集", edit_user_path(@user) %>
+        <% end %>
+<!--フォロー機能-->
+        <% else %>
+        <% if current_user.already_following?(@user) %>
+          <%= link_to user_relationships_path(@user), method: :delete do %>
+          <button class="btn btn-danger">フォロー解除</button>
+          <% end %>
+          <% else %>
+          <%= link_to user_relationships_path(@user), method: :post do %>
+          <button class="btn btn-primary">フォロー</button>
+          <% end %>
+          <% end %>
+        <% end %>
+      </div>
+
+    <div class='col-md-8 offset-md-1'>
+    <% @reptiles.each do |reptile| %>
+      <%= link_to reptile_path(reptile.id) do %>
+        <%= attachment_image_tag(reptile, :image, :fill, 100, 100, fallback: "no_image.jpg") %>
+      <% end %>
+      <p>投稿ユーザー画像：<%= image_tag('no_image.jpg') %></p>
+      <p>タイトル：<%= reptile.title %></p>
+      <p>説明：<%= reptile.caption %></p>
+      <p>ユーザーネーム：<%= reptile.user.name %></p>
+      <% end %>
+      <%= paginate @reptiles %>
+    </div>
+  </div>
 </div>
-<% @reptiles.each do |reptile| %>
-<div>
-  <%= link_to reptile_path(reptile.id) do %>
-    <%= attachment_image_tag reptile, :image %>
-  <% end %>
-  <p>投稿ユーザー画像：<%= image_tag('no_image.jpg') %></p>
-  <p>タイトル：<%= reptile.title %></p>
-  <p>説明：<%= reptile.caption %></p>
-  <p>ユーザーネーム：<%= reptile.user.name %></p>
-</div>
-<% end %>
-<%= paginate @reptiles %>
