--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,8 +6,8 @@
         <% if @user.id == current_user.id %>
         <!--質問箇所-->
         <% if @user == current_user %>
-          <%#= link_to "プロフィール編集", edit_user_path(@user) %>
-           <%= render 'info', user: @user %>
+          <%= link_to "プロフィール編集", edit_user_path(@user) %>
+           <%#= render 'info', user: @user %>
         <% end %>
 <!--フォロー機能-->
         <% else %>
