--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,7 +1,11 @@
 <div class='container px-5 px-sm-0'>
  <div class="row">
-  <h1 class="px-3 mx-auto">
-    ようこそReptilsへ‼
+  <h1 class='mx-auto col-11 col-sm-10 col-lg-8 col-xl-6'>
+    ようこそReptilsへ‼<br>
+    <h2>このサイトでは飼育している生き物の簡易的に紹介するできるサイトとなっています！<br>
+    お手数ですがホーム画面より新規登録もしくはログインをお願いいたします
+    </h2>
+    <%= image_tag 'IMG_2045.jpeg', width: '100%', height: '50%' %>
   </h1>
  </div>
 </div>
