--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class='container'>
   <div class="row">
     <div class='mx-auto col-11 col-sm-10 col-lg-8 col-xl-6'>
       <p>Welcome to Reptils!!</p>
@@ -7,9 +7,12 @@
         <div class="row">
           <%= link_to 'Log in',new_user_session_path, class: "btn btn-info btn-sm btn-block mb-3 sign_in" %>
         </div>
-        <div class="row">
+        <div class="row pb-3">
           <%= link_to 'Sign Up',new_user_registration_path, class: "btn btn-success btn-sm btn-block sign_up" %>
         </div>
+      </div>
+      <div class='mt-10'>
+        <%= image_tag 'IMG_2022.jpeg', width: '100%', height: '80%' %>
       </div>
     </div>
   </div>
