--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="h-100 text-center">
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
@@ -30,7 +30,7 @@
             <%= link_to "ログアウト", destroy_user_session_path, method: :delete,class: 'fas fa-sign-out-alt nav-link text-light' %>
           </li>
           <li>
-            <%= link_to 'マイページ', user_path(current_user.id),class: 'fas fa-male nav-link text-ligh' %>
+            <%= link_to 'マイページ', user_path(current_user.id),class: 'fas fa-male nav-link text-light' %>
           </li>
           <li>
             <%= link_to 'ユーザー',users_path,class: 'fas fa-users nav-link text-light' %>
