--- a/app/views/reptiles/edit.html.erb
+++ b/app/views/reptiles/edit.html.erb
@@ -1,6 +1,6 @@
  <div class='container px-5 px-sm-0'>
   <div class='row'>
-    <div class='col-md-3'>
+    <div class='col-md-8 offset-md-1'>
       <h4>記事編集画面</h4>
       <%#= form_with model: @reptile,url:reptile_path, local:true do |f| %>
       <%= form_with model: @reptile, local:true do |f| %>
