--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
- <div class="">
-   <div class="row">
-    <div class='col-md-3'>
+ <div class="container px-5 px-sm-0">
+   <div class="row  mt-5">
+    <div class='col-md-8 offset-md-1'>
       <h2>ユーザー設定</h2>
       <%= form_with model:@user, local:true do |f| %>
         <label for="inputName">Name</label>
