--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -5,7 +5,7 @@
     <h2>このサイトでは飼育している生き物の簡易的に紹介するできるサイトとなっています！<br>
     お手数ですがホーム画面より新規登録もしくはログインをお願いいたします
     </h2>
-    <%= image_tag 'IMG_2045.jpeg', width: '100%', height: '50%' %>
+    <%#= image_tag asset_path('IMG_2045.jpg', width: '50%', height: '50%') %>
   </h1>
  </div>
 </div>
