--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -12,7 +12,7 @@
         </div>
       </div>
       <div class='mt-10'>
-        <%= image_tag 'IMG_2022.jpeg', width: '100%', height: '80%' %>
+        <%#= image_tag asset_path('IMG_2022.jpg', width: '100%', height: '80%') %>
       </div>
     </div>
   </div>
