--- a/app/views/reptiles/_index.html.erb
+++ b/app/views/reptiles/_index.html.erb
@@ -6,6 +6,7 @@
   <p>投稿ユーザー画像: <%= attachment_image_tag reptile.user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg" %></p>
   <p>記事タイトル: <%= reptile.title %></p>
   <P>本文: <%= reptile.caption %></P>
+  <span class="sentiment-score">本文の感情分析スコア<%= reptile.score %></span>
   <p>ユーザーネーム: <%= reptile.user.name %></p>
   <!--コメント件数表示-->
   <p><%= link_to "#{reptile.reptile_comments.count} コメント", reptile_path(reptile.id) %></p>
