--- a/app/views/reptiles/show.html.erb
+++ b/app/views/reptiles/show.html.erb
@@ -5,6 +5,8 @@
           <p>投稿ユーザー画像: <%= attachment_image_tag @reptile.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %></p>
           <p>記事タイトル: <%= @reptile.title %></p>
           <P>本文: <%= @reptile.caption %></P>
+          <!--感情スコアの実施--
+          <p class="sentiment-score">本文の感情分析スコア[<%= @reptile.score %>]</p>
           <p>ユーザーネーム: <%= @reptile.user.name %></p>
         <% if @reptile.user == current_user %>
           <%= link_to "記事削除", reptile_path(@reptile), method: :delete %>
