--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
     <div class='col-md-3'>
       <h3><%= @user.name %></h3>
         <%= attachment_image_tag(@user, :profile_image, :fill, 200, 200, format: 'jpeg', fallback: "no_image.jpg") %>
-        <% if @user.id == current_user.id %>
+        <p><% if @user.id == current_user.id %></p>
         <!--質問箇所-->
         <% if @user == current_user %>
           <%= link_to "プロフィール編集", edit_user_path(@user) %>
